test/programs/bad/typechecker/new_2.lq
a :: Qbit
a = new @1

main :: Bit
main = measr a
